# Fortress

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  policy_demo.md  simple_benchmark.rs  standalone_aegis_test.rs  test_aegis.rs  test_policy_integration.rs  test_security_fixes.rs  verify_fixes.rs
crates/fortress-cli/: Cargo.toml
crates/fortress-cli/src/: config_manager.rs  main.rs
crates/fortress-cli/src/commands/: config.rs  create.rs  create_simple.rs  key.rs  mod.rs  start.rs  status.rs  stop.rs
crates/fortress-cli/src/utils/: path_utils.rs
crates/fortress-core/: Cargo.toml
crates/fortress-core/benches/: encryption_bench.rs
crates/fortress-core/src/: audit.rs  audit_analysis.rs  audit_rotation.rs  benchmark.rs  config.rs  encryption.rs  error.rs  hsm.rs  hsm_test.rs  key.rs  lib.rs  policy.rs  policy_test.rs  query.rs  storage.rs  utils.rs
crates/fortress-core/tests/: integration_tests.rs  test_audit.rs  test_audit_simple.rs
docs/: API.md  ARCHITECTURE.md  FORTRESS_ROADMAP.md  FUTURE_PLANS.md
examples/: benchmark_aegis.rs  hsm_integration_test.rs
src/: lib.rs
tests/: test_policy.rs  test_policy_simple.rs
