[package]
name = "fortress-core"
version = "0.1.0"
edition = "2021"
authors = ["Fortress Team <team@fortress-db.com>"]
license = "Apache-2.0"
description = "Core library for Fortress secure database system"
homepage = "https://github.com/Genius740Code/Fortress"
repository = "https://github.com/Genius740Code/Fortress"
documentation = "https://docs.fortress-db.com"
keywords = ["database", "encryption", "security", "privacy", "vault"]
categories = ["database", "cryptography"]
rust-version = "1.70"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ring = "0.17"
chacha20poly1305 = "0.10"
aegis = "0.2"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID
uuid = { version = "1.6", features = ["v4", "serde", "fast-rng"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Base64 encoding
base64 = "0.21"

# Hex encoding
hex = "0.4"

# Zeroize for secure memory handling
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Derive macros
derive_builder = "0.12"
derive_more = { version = "0.99", features = ["from", "into", "display"] }

# Regular expressions
regex = "1.10"

# Memory management
bytes = "1.5"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"

[features]
default = ["std"]
std = []
simd = []
hardware-acceleration = ["ring/simd"]
fips = ["ring/fips"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "encryption_bench"
harness = false
